--- a/microservices-service/redis.conf
+++ b/microservices-service/redis.conf
@@ -184,7 +184,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /Users/fcarta/workspace/VMware/2016_Q3_MicroServices/microservices/microservices-service/
+dir /mnt/microservices
 
 ################################# REPLICATION #################################
 
