--- a/microservices-service/service-approval/pom.xml
+++ b/microservices-service/service-approval/pom.xml
@@ -46,6 +46,39 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+
+    <!-- Testing -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>rest-assured</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>spring-mock-mvc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.orange.redis-embedded</groupId>
+      <artifactId>embedded-redis</artifactId>
+    </dependency>
+
+    <!-- Swagger TODO[fcarta]: extract these up to main project -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
