Adding in websockets

--- a/microservices-service/service-reservation/pom.xml
+++ b/microservices-service/service-reservation/pom.xml
@@ -26,7 +26,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>         
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>    
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
@@ -37,6 +41,10 @@
       <version>2.6.2</version>
       <type>jar</type>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-messaging</artifactId>
     </dependency>
 
     <!-- Testing -->
