SoapUI Testing with Docker
* Added new Dockerfile to spin up our soaptest box we are going
to use to run the tests
* created runner.sh script that is going to execute the tests in
the container
* Updated README with instructions on how to build and run tests

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# SoapUI
+Basic_Fuction_Suite-*
+soapui-errors.log
+soapui.log
+global-groovy.log
+
 # Package Files #
 *.jar
 *.war
