--- a/microservices-webapp/pom.xml
+++ b/microservices-webapp/pom.xml
@@ -14,6 +14,11 @@
   <packaging>war</packaging>
   <name>MicroServices - Web Application (Web UI)</name>
 
+  <properties>
+      <main.basedir>${basedir}/../..</main.basedir>
+      <m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
+  </properties>
+
   <dependencies>
     <dependency>
       <!-- groupId>${project.parent.groupId}</groupId> THIS DOESNT WORK FOR SOME REASON-->      
@@ -22,49 +27,39 @@
       <version>${project.parent.version}</version>
     </dependency>   
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-        <exclusions>
-            <exclusion>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-tomcat</artifactId>
-            </exclusion>
-        </exclusions>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+      <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+    </dependency>    
+    <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-jetty</artifactId>
-    </dependency>  
-
-    <!-- Apache Tiles -->
+        <artifactId>spring-boot-starter-tomcat</artifactId>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-jasper</artifactId>
+        <scope>provided</scope>
+    </dependency>
     <dependency>
         <groupId>org.apache.tiles</groupId>
-        <artifactId>tiles-extras</artifactId>
+        <artifactId>tiles-jsp</artifactId>
     </dependency>
   </dependencies>
 
 
   <build>
-    <finalName>microservices</finalName>
-
-    <plugins>
-      <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.2.15.v20160210</version>
-        <configuration>
-          <scanIntervalSeconds>10</scanIntervalSeconds>
-          <!-- webApp>
-            <contextPath>/test</contextPath>
-          </webApp>
-          <loginServices>
-            <loginService implementation="org.eclipse.jetty.security.HashLoginService">
-              <name>Test Realm</name>
-              <config>${project.basedir}/src/etc/realm.properties</config>
-            </loginService>
-          </loginServices-->
-        </configuration>
-      </plugin>
-    </plugins>    
+    <finalName>microservices</finalName>  
   </build>
 </project>
