--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
             <!-- Apache Tiles -->
             <dependency>
                 <groupId>org.apache.tiles</groupId>
-                <artifactId>tiles-extras</artifactId>
+                <artifactId>tiles-jsp</artifactId>
                 <version>${apache-tiles-version}</version>
             </dependency>
 
