--- a/microservices-webapp/pom.xml
+++ b/microservices-webapp/pom.xml
@@ -56,10 +56,45 @@
         <groupId>org.apache.tiles</groupId>
         <artifactId>tiles-jsp</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+    </dependency> 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>    
   </dependencies>
 
 
   <build>
     <finalName>microservices</finalName>  
+    <resources>
+      <resource>
+        <directory>${basedir}/config</directory>
+        <filtering>true</filtering>
+        </resource>
+    </resources>      
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+            <configuration>
+              <mainClass>${start-class}</mainClass>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>${start-class}</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
