--- a/microservices-service/service-error/pom.xml
+++ b/microservices-service/service-error/pom.xml
@@ -46,6 +46,19 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sendgrid</groupId>
+      <artifactId>sendgrid-java</artifactId>
+    </dependency>     
+    <!-- Swagger TODO[fcarta]: extract these up to main project -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+    </dependency>      
   </dependencies>
 
   <build>
