--- a/microservices-service/service-error/config/application.properties
+++ b/microservices-service/service-error/config/application.properties
@@ -4,7 +4,7 @@ logging.level.com.vmware.pso.samples: DEBUG
 
 # REDIS (RedisProperties)
 spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.pool.max-active=100
 spring.redis.pool.max-idle=100
 spring.redis.pool.max-wait=500
