--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,9 @@
 
 		<!-- Swagger -->
 		<io-springfox-swagger>2.2.2</io-springfox-swagger>
+		
+		<!-- SendGrid -->
+		<sendgrid-version>2.2.2</sendgrid-version>
 
 		<java.version>1.8</java.version>
 		<resource.delimiter>@</resource.delimiter> <!-- delimiter that doesn't clash with Spring ${} placeholders -->
@@ -128,6 +131,13 @@
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>${io-springfox-swagger}</version>
 			</dependency>
+			
+			<!-- Email (SendGrid) -->
+            <dependency>
+                <groupId>com.sendgrid</groupId>
+                <artifactId>sendgrid-java</artifactId>
+                <version>${sendgrid-version}</version>
+            </dependency>			
 		</dependencies>
 	</dependencyManagement>
 
